# node-rust-bridge

./: .gitignore  README.md
node-bridge/: Cargo.toml  README.md
node-bridge/src/: lib.rs
rustlang-bridge/: LICENSE  README.md  index.js  package-lock.json  package.json
